--- a/Regression_Model_Summative.ipynb
+++ b/Regression_Model_Summative.ipynb
@@ -34,7 +34,8 @@
       "metadata": {
         "id": "eTx32FniJ25I",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "535c054a-4e58-4153-f7f8-a1aa3af48b11"
       },
@@ -562,6 +563,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The comparison plot reveals that some algorithms require scaling while for others the difference is negligible. For instance, KNeighborsRegressor shows a significant performance increase once scaled, jumping from a test $R^2$ of 0.100 to 0.469. This is because scaling prevents features with large numeric ranges, such as wind direction from disproportionately influencing the model's distance calculations. While the scaled Ridge and Linear Regression models are the strongest performers, they show very little difference between training and test scores, indicating they are well-generalized. In contrast, the scaled kNN model shows signs of overfitting, as its training score is much higher than its test score. This suggests the model is focusing too much on specific data points rather than general trends, which could be corrected by increasing the number of neighbors to create a more balanced prediction."
+      ],
+      "metadata": {
+        "id": "xiYFHof1czgp"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dFzBwCTwJ25c"
       },
@@ -651,12 +661,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "I_r4Nbxbakl8",
-        "outputId": "1a4330ca-1427-4c33-c7e1-04684efded07",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+          "height": 1014
+        },
+        "id": "I_r4Nbxbakl8",
+        "outputId": "1a4330ca-1427-4c33-c7e1-04684efded07"
       },
       "execution_count": 32,
       "outputs": [
@@ -699,7 +709,13 @@
       },
       "source": [
         "### Exercise 2.2\n",
-        "Discuss the curves you obtained. Where do the models underfit? Where do they overfit? How much does performance change when you tweak the regularization setting?"
+        "Discuss the curves you obtained. Where do the models underfit? Where do they overfit? How much does performance change when you tweak the regularization setting?\n",
+        "\n",
+        "The sweeps show a sharp performance difference based on the linear nature of the dataset it was trained on. Ridge and Lasso both have a stable test $R^2$ of 0.48 for a large range of low alpha values with mild overfitting. Once alpha is greater than a certain threshold - which is more so for Lasso ($10^{-2}$) than for Ridge ($10^1$ approximately) because of its feature-elimination behavior - performance falls steeply towards zero. Within this \"safe zone\" the precise choice of alpha hardly matters.\n",
+        "\n",
+        "kNN struggles throughout. At value of $k=1$, it will perfectly memorize training data and catastrophically test data (negative $R^2$). Performance is slightly maximized at $k=10$--$20$ at test $R^2 \\approx 0.12$ followed by underfitting.\n",
+        "\n",
+        "It is much more sensitive to its hyperparameter, and does not come close to matching the linear models.0.48 vs 0.12 A big gap, which indicates the $NO_2$ - traffic/weather relationship is essentially linear. 500 observations is too small to make kNN effective because the feature space is sparse.\n"
       ]
     },
     {
@@ -711,7 +727,9 @@
         "### Exercise 2.3\n",
         "ElasticNet blends L1 and L2 regularization. The `l1_ratio` parameter controls how much weight goes to L1 (Lasso) versus L2 (Ridge), so ElasticNet has **two** interacting hyperparameters: `l1_ratio` and `alpha`.\n",
         "\n",
-        "Run a grid search over both parameters to compute cross-validation scores on a 2D grid. Then use the provided function to draw a heatmap and interpret it. What pattern do you see, and how do `alpha` and `l1_ratio` influence each other?"
+        "Run a grid search over both parameters to compute cross-validation scores on a 2D grid. Then use the provided function to draw a heatmap and interpret it. What pattern do you see, and how do `alpha` and `l1_ratio` influence each other?\n",
+        "\n",
+        "The ElasticNet heatmap displays how performance changes based on the strength of the penalty and the specific mix of regularization used. The l1_ratio acts as a selector: a high ratio focuses on \"Lasso\" behavior, which attempts to simplify the model by removing less important features, while a low ratio uses \"Ridge\" behavior to keep all features but reduce their impact. The heatmap allows us to identify the \"sweet spot\" for this specific dataset, showing whether it is better to prioritize feature removal or to distribute weight across all available variables."
       ]
     },
     {
@@ -839,11 +857,20 @@
         "## Exercise 3: Coefficient comparison\n",
         "As a final check, compare the coefficients learned by the optimized linear models.\n",
         "\n",
+        "By looking at the model coefficients, we can see how different types of regularization handle the input features. With weak regularization, most models agree on which factors are the most important. However, as the penalty becomes stronger, the differences become clear: Ridge keeps all variables but makes their impact smaller, while Lasso sets several coefficients to exactly zero, effectively \"turning off\" the features it finds least useful. These differences explain why some models perform better than others; if Lasso is more accurate, it likely means the dataset contains redundant information that the model successfully filtered out."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Exercise 3.1\n",
         "Make a [scatter plot](https://matplotlib.org/gallery/shapes_and_collections/scatter.html) of the coefficients, using different colors for different models. Are the learned weights broadly similar, or do you see clear differences?\n",
         "\n",
         "For each model, pick an `alpha` that looked reasonable in Exercise 2. If you’re unsure, use `alpha=0.001`."
-      ]
+      ],
+      "metadata": {
+        "id": "GQ_RuBXlewXc"
+      }
     },
     {
       "cell_type": "code",
@@ -873,12 +900,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "vPqFpPEmaF6V",
-        "outputId": "1b23a55c-7080-45a8-bf26-af49e3e28791",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "vPqFpPEmaF6V",
+        "outputId": "1b23a55c-7080-45a8-bf26-af49e3e28791"
       },
       "execution_count": 31,
       "outputs": [
@@ -901,7 +928,11 @@
       },
       "source": [
         "### Exercise 3.2\n",
-        "Repeat the coefficient plot, but now apply much stronger regularization (e.g., `alpha=1`). What changes? Does this help you connect the earlier performance differences between Ridge and Lasso (Exercise 1.2) to how their coefficients behave?"
+        "Repeat the coefficient plot, but now apply much stronger regularization (e.g., `alpha=1`). What changes? Does this help you connect the earlier performance differences between Ridge and Lasso (Exercise 1.2) to how their coefficients behave?\n",
+        "\n",
+        "With a stronger regularization term (α=1), there is a dramatic reduction in the value of all the learned coefficients. In the Ridge regression model, the L2 regularization term forces the coefficients to zero, but they are not exactly zero, indicating that the model still takes all the features into account, but with much less emphasis. In the Lasso regression model, the L1 regularization term is strong enough to set some of the coefficients (corresponding to less important atmospheric variables) to exactly zero, thus automatically selecting features.\n",
+        "\n",
+        "This explains the results of the previous exercises, where the performance difference between the models is evident. The sparsity introduced by the Lasso regression model illustrates its ability to reduce the complexity of the model by discarding predictors, which may result in a sudden increase in the $R^2$ value if the discarded predictors still have relevant information. On the other hand, the Ridge regression model's ability to retain all the features but with less emphasis illustrates its robustness in modeling a relationship that is dominated by many cumulative effects rather than a few important ones. This comparison confirms that while both models prevent overfitting, Lasso prioritizes a sparse and interpretable model, while Ridge maintains a more holistic but complex feature set."
       ]
     },
     {
